# MTGOSDK

./: .bazelignore  .bazelrc  .editorconfig  .env-example  .gitattributes  .gitignore  .gitmodules  BUILD.bazel  Directory.Build.props  Directory.Build.rsp  Directory.Build.targets  Directory.Packages.Props  Directory.Packages.props  MTGOInjector.sln  NOTICE  NUnit.sln  NuGet.config  NuGet.pkg.props  README.md  Ref.sln  SDK.sln  SDK.slnf  SourceLink.props  WORKSPACE.bazel  docfx.json  docker-compose.yml  dotnet-tools.json  dotnet.config  global.json  mtgo-injector.sln  nuget-clean.ps1  package.sh  paket.bzl  paket.dependencies  publish.ps1  version.json
.github/actions/download-artifact/: action.yml
.github/actions/setup-dev-drive/: action.yml
.github/actions/setup-dotnet/: action.yml
.github/actions/update-commit-status/: action.yml
.github/workflows/: build.yml  docs.yml  release.yml  test.yml
.nuget/: NuGet.config
MTGOInjector/: BaseClient.cs  MTGOClient.cs  MTGOInjector.csproj  MTGOInteractive.cs  MTGOTypes.cs  Program.cs
MTGOSDK/: ILLink.Descriptors.xml  ILRepack.targets  MTGOSDK.csproj  MTGOSDK.pkg.props  MTGOSDK.ref.props  app.config  packages.lock.json
MTGOSDK.MSBuild/: MTGOSDK.MSBuild.csproj  MTGOSDK.MSBuild.pkg.props  packages.lock.json
MTGOSDK.MSBuild/src/: ReferenceAssemblyGenerator.cs
MTGOSDK.MSBuild/src/FileSystem/: Glob.cs
MTGOSDK.MSBuild/src/ReferenceAssembly/: ReferenceAssemblyGenerator.cs
MTGOSDK.Ref/: MTGOSDK.Ref.csproj  packages.lock.json
MTGOSDK.Tests/: MTGOSDK.Tests.csproj  packages.lock.json
MTGOSDK.Tests/src/: BaseFixture.cs  GlobalUsings.cs  SetupFixture.cs
MTGOSDK.Win32/: MTGOSDK.Win32.csproj  MTGOSDK.Win32.pkg.props  packages.lock.json
MTGOSDK.Win32/src/: Constants.cs
MTGOSDK/lib/: MTGOSDK.Core.props  MTGOSDK.Core.targets  MTGOSDK.Resources.props  MTGOSDK.Resources.targets
MTGOSDK/src/: GlobalEvents.cs
docs/: CHANGELOG.md  FAQ.md  README.md  api-reference.md  architecture.md  getting-started.md  toc.yml
docs/api/: index.md
docs/architecture/: README.md  core-classes.md  dlr-wrapper.md  events.md  logging.md  memory.md  overview.md  remote-client.md  serialization.md  threading.md  type-compilation.md
docs/guides/: README.md  chat.md  collection.md  games.md  history.md  interface.md  play.md  settings.md  trade.md  users.md
docs/reference/: README.md  clickonce.md  client.md  connection-lifecycle.md  debugging.md  object-provider.md
examples/BasicBot/: BasicBot.csproj  Program.cs  packages.lock.json
examples/BasicInjector/: BasicInjector.csproj  Program.cs  packages.lock.json
examples/CollectionTracker/: CollectionTracker.csproj  Program.cs  packages.lock.json
examples/GameTracker/: GameTracker.csproj  Item.cs  Match.cs  Program.cs  Tournament.cs  packages.lock.json
samples/BasicInjector/: BasicInjector.csproj
src/MTGOInjector/: BaseClient.cs  MTGOClient.cs  MTGOInjector.csproj  MTGOTypes.cs
src/MTGOSDK/: MTGOSDK.csproj
src/MTGOSDK.MSBuild/: MTGOSDK.MSBuild.csproj
src/MTGOSDK.Ref/: MTGOSDK.Ref.csproj
tools/DocFX/: Program.cs  packages.lock.json
tools/ILLink/: ILLink.props  ILLink.targets
tools/ILRepack.MSBuild/: ILRepack.MSBuild.csproj  ILRepack.MSBuild.props  ILRepack.MSBuild.targets  packages.lock.json
tools/bazel/: windows_dll_library.bzl
(+638 files in other folders)
