"""
"""

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# http_archive(
#     name = "rules_license",
#     urls = [
#         "https://mirror.bazel.build/github.com/bazelbuild/rules_license/releases/download/0.0.7/rules_license-0.0.7.tar.gz",
#         "https://github.com/bazelbuild/rules_license/releases/download/0.0.7/rules_license-0.0.7.tar.gz",
#     ],
#     sha256 = "4531deccb913639c30e5c7512a054d5d875698daeb75d8cf90f284375fe7c360",
# )

# http_archive(
#     name = "rules_pkg",
#     urls = [
#         "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.9.1/rules_pkg-0.9.1.tar.gz",
#         "https://github.com/bazelbuild/rules_pkg/releases/download/0.9.1/rules_pkg-0.9.1.tar.gz",
#     ],
#     sha256 = "8f9ee2dc10c1ae514ee599a8b42ed99fa262b757058f65ad3c384289ff70c4b8",
# )

# load("@rules_pkg//pkg:deps.bzl", "rules_pkg_dependencies")
# rules_pkg_dependencies()

################################################################################
#                                 rules_dotnet                                 #
################################################################################

http_archive(
    name = "rules_dotnet",
    url = "https://github.com/bazelbuild/rules_dotnet/releases/download/v0.10.1/rules_dotnet-v0.10.1.tar.gz",
    strip_prefix = "rules_dotnet-0.10.1",
    sha256 = "fac964c6f9663904dfed5a951a59893d505246e77e5bdad47c22e2ae081c3631",
)

load(
    "@rules_dotnet//dotnet:repositories.bzl",
    "dotnet_register_toolchains",
    "rules_dotnet_dependencies",
)
rules_dotnet_dependencies()

# Here you can specify the version of the .NET SDK to use.
dotnet_register_toolchains("dotnet", "7.0.101")

load("@rules_dotnet//dotnet:rules_dotnet_nuget_packages.bzl", "rules_dotnet_nuget_packages")
rules_dotnet_nuget_packages()

################################################################################
#                                 paket2bazel                                  #
################################################################################

load("@rules_dotnet//dotnet:paket2bazel_dependencies.bzl", "paket2bazel_dependencies")
paket2bazel_dependencies()

load("//:paket.bzl", "paket")
paket()
